--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02n\"}],\"base\":\"stations\",\"main\":{\"temp\":68.52,\"feels_like\":65.52,\"temp_min\":63,\"temp_max\":73.4,\"pressure\":1010,\"humidity\":53},\"visibility\":16093,\"wind\":{\"speed\":5.82,\"deg\":280},\"clouds\":{\"all\":20},\"dt\":1593062601,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1593076124,\"sunset\":1593131105},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":83.32,\"feels_like\":74.77,\"temp_min\":80.01,\"temp_max\":86,\"pressure\":1013,\"humidity\":28},\"visibility\":16093,\"wind\":{\"speed\":13.87,\"deg\":270},\"clouds\":{\"all\":75},\"dt\":1593124328,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1593076124,\"sunset\":1593131105},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
      "execution_count": 12,
@@ -225,21 +225,21 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 803,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 68.52,\n",
-       "  'feels_like': 65.52,\n",
-       "  'temp_min': 63,\n",
-       "  'temp_max': 73.4,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 53},\n",
+       " 'main': {'temp': 83.32,\n",
+       "  'feels_like': 74.77,\n",
+       "  'temp_min': 80.01,\n",
+       "  'temp_max': 86,\n",
+       "  'pressure': 1013,\n",
+       "  'humidity': 28},\n",
        " 'visibility': 16093,\n",
-       " 'wind': {'speed': 5.82, 'deg': 280},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1593062601,\n",
+       " 'wind': {'speed': 13.87, 'deg': 270},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1593124328,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -310,21 +310,21 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 803,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 68.54,\n",
-       "  'feels_like': 65.55,\n",
-       "  'temp_min': 63,\n",
-       "  'temp_max': 73.4,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 53},\n",
+       " 'main': {'temp': 83.32,\n",
+       "  'feels_like': 74.77,\n",
+       "  'temp_min': 80.01,\n",
+       "  'temp_max': 86,\n",
+       "  'pressure': 1013,\n",
+       "  'humidity': 28},\n",
        " 'visibility': 16093,\n",
-       " 'wind': {'speed': 5.82, 'deg': 280},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1593062405,\n",
+       " 'wind': {'speed': 13.87, 'deg': 270},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1593124328,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "1593062405"
+       "1593124328"
       ]
      },
      "execution_count": 19,
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.36 -71.06 73.4 53 20 5.82\n"
+      "42.36 -71.06 86 28 75 13.87\n"
      ]
     }
    ],
@@ -427,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2020-06-25 05:20:05'"
+       "'2020-06-25 22:32:08'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,6 +448,29 @@
     "date = boston_data[\"dt\"]\n",
     "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-369ccbb73b06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtoday\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtoday\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%x\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtoday\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "today = time.time()\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
    ]
   },
   {
